<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLayourColor"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    tools:context=".View.BlankFragmentVMPatient">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTittle"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/tittle_RegisterPac"
        android:textAlignment="center"
        android:textColor="#11504A"
        android:textColorHighlight="#009688"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextNames"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/names_pac"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextLastNames"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/lastname_pac"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextDni"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="number"
        android:digits="0123456789"
        android:maxLength="8"
        android:hint="@string/dni_pac" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/address_pac" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="5dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email_pac" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="7dp"
        android:background="@color/mainTheme_btn"
        android:text="@string/txtbtn_register"
        android:textColor="#FFFFFF"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="7dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="7dp"
        android:layout_marginBottom="7dp"
        android:background="@color/secondTheme_btn"
        android:text="@string/txtbtn_cancel"
        android:textColor="#000000
" />


</androidx.appcompat.widget.LinearLayoutCompat>