<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLayourColor"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".View.ViewMainActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTittle"
        android:layout_width="wrap_content"
        android:layout_height="43dp"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/tittle_main"
        android:textAlignment="center"
        android:textColor="#11504A"
        android:textColorHighlight="#009688"
        android:textSize="18sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegisterPatient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="20dp"
        android:background="@color/mainTheme_btn"
        android:text="@string/txtbtn_register_patient"
        android:textColor="#FFFFFF"
        app:strokeColor="#000000"
        app:strokeWidth="2dp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegisterMedicalVisit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="22dp"
        android:background="@color/mainTheme_btn"
        android:text="@string/txtbtn_register_medicalVisit"
        android:textColor="@color/white" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewDataPatient"
        android:layout_width="match_parent"
        android:layout_height="157dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="22dp"
        android:text="@string/txtView_datos_pac"
        android:textColor="#455A64" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSendEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="12dp"
        android:background="@color/mainTheme_btn"
        android:text="@string/txtbtn_send_email"
        android:textColor="@color/white" />


</androidx.appcompat.widget.LinearLayoutCompat>